# cursor-brain

./: Cargo.toml  README.md  README.zh-CN.md
doc/: DESIGN.md  architecture.en.md  architecture.zh.md  openai-protocol.md  openapi.yaml  provider-compat.md  provider-definition.json  tutorial.en.md  tutorial.zh.md
src/: config.rs  cursor.rs  main.rs  metrics.rs  openai.rs  server.rs  service.rs  session.rs
